# disk-analyzer

./: CMakeLists.txt  README.md  main.c  mftreader.cpp
